package com.Tapr.Trackpad_Controller.Services;

import org.springframework.stereotype.Service;

@Service
public class GoveeApiService {
}
