classDiagram
%% Entities
    class GestureRule {
        +Long id
        +String gestureName
        +String gestureType
        +Long actionId
        +Boolean enabled
        +LocalDateTime createdAt
        +LocalDateTime updatedAt
        +Note: MVP - 1 finger only
    }

    class Action {
        +Long id
        +String actionType
        +String actionName
        +String description
        +LocalDateTime createdAt
    }

    class LightAction {
        +Long id
        +Long actionId
        +String operation
        +String color
        +Integer brightness
        +Integer duration
    }

%% Routines - Future Version (v2.0+)

    class Device {
        +Long id
        +String deviceName
        +String deviceType
        +String ipAddress
        +String macAddress
        +Boolean isOnline
        +LocalDateTime lastSeen
    }

%% Controllers
    class GestureController {
        +createGestureRule(GestureRuleDTO)
        +getAllGestureRules()
        +getGestureRule(Long id)
        +updateGestureRule(Long id, GestureRuleDTO)
        +deleteGestureRule(Long id)
        +executeGesture(String gestureName)
    }

    class ActionController {
        +createAction(ActionDTO)
        +getAllActions()
        +getAction(Long id)
        +updateAction(Long id, ActionDTO)
        +deleteAction(Long id)
    }

    class DeviceController {
        +registerDevice(DeviceDTO)
        +getAllDevices()
        +getDevice(Long id)
        +getDeviceStatus(Long id)
        +updateDevice(Long id, DeviceDTO)
    }

    class RoutineController {
        Future v2.0+
    }

%% Services
    class GestureService {
        +createGestureRule(GestureRuleDTO)
        +findAllGestureRules()
        +findGestureByName(String name)
        +updateGestureRule(Long id, GestureRuleDTO)
        +deleteGestureRule(Long id)
        +processGesture(String gestureName)
    }

    class ActionService {
        +createAction(ActionDTO)
        +findAllActions()
        +findActionById(Long id)
        +executeAction(Long actionId)
        +updateAction(Long id, ActionDTO)
    }

    class DeviceService {
        +registerDevice(DeviceDTO)
        +findAllDevices()
        +findDeviceById(Long id)
        +checkDeviceStatus(Long id)
        +sendCommand(Long deviceId, String command)
    }

    class GoveeApiService {
        +turnOnLight(String deviceId)
        +turnOffLight(String deviceId)
        +setColor(String deviceId, String color)
        +setBrightness(String deviceId, Integer brightness)
        +rotateColors(String deviceId, Integer interval)
    }

    class RoutineService {
        Future v2.0+
    }

%% Repositories
    class GestureRuleRepository {
        <<interface>>
        +findByGestureName(String name)
        +findByFingerCount(Integer count)
        +findByEnabled(Boolean enabled)
    }

    class ActionRepository {
        <<interface>>
        +findByActionType(String type)
    }

    class DeviceRepository {
        <<interface>>
        +findByDeviceType(String type)
        +findByIsOnline(Boolean online)
    }

    class RoutineRepository {
        <<interface>>
        Future v2.0+
    }

%% Relationships
    GestureController --> GestureService
    ActionController --> ActionService
    DeviceController --> DeviceService

    GestureService --> GestureRuleRepository
    GestureService --> ActionService
    ActionService --> ActionRepository
    ActionService --> DeviceService
    ActionService --> GoveeApiService
    DeviceService --> DeviceRepository

    GestureRule "1" --> "1" Action
    Action "1" --> "0..1" LightAction
    LightAction "*" --> "1" Device